Fix: implements CRUD NoteTag and fix errors

--- a/backend/SENAI_Notes/SENAI_Notes.csproj
+++ b/backend/SENAI_Notes/SENAI_Notes.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\ApplicationDbContext.cs" />
+    <Compile Remove="Interfaces\AppDbContext.cs" />
+    <Compile Remove="Repositories\SENAI_NotesContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Services\PasswordServices.cs" />
   </ItemGroup>
 
